# staggcorr

./: .gitignore  README.md  install_requires.txt  pyproject.toml  setup.py
stagcorr/: __init__.py  stagFuncs.py
stagcorr/correlators/: fourPoints.py  fourPointsFree.py  fourPointsFreeFixed.py  main.py  npoint.py  npointFree.py  symmetricLinks.py  threePoints.py  threePointsFree.py  threePointsFreeFixed.py  twoPoints.py  twoPointsFree.py  twoPointsFreeFixed.py
stagcorr/gauge/: HISQSmear.py  gaugeIO.py  reuniterise.py
stagcorr/gauge_config/4_4_4_4/: 4444_rndm
stagcorr/gauge_config/6_4_4_4/: 6444_rndm  UnitField
stagcorr/lattice/: navigation.py
stagcorr/propagatorUtils/: StagDiracOP.py  StagDiracOPFree.py  nnLists.py  propIO.py  propIOFree.py  propcore.py  propcoreFree.py
tests/: Corresponding MILC CG input files to ATA Solver.ipynb  Untitled.ipynb  test_milc_comparison.py
tests/MILCDATA/: MILCRUNS  four_point_G5X_001_G5X_001_8  four_point_G5X_001_G5X_001_O  four_point_G5X_101_G5X_101_8  four_point_G5X_101_G5X_101_O  four_point_GXT_001_GXT_001_8
